# agentic_swarm

./: .gitignore  AGENTS.md  README.md  communication.md  pyproject.toml
.github/workflows/: ci.yml
src/agentic_swarm/: __init__.py  __main__.py  agent.py  cli.py  communication.py  config.py  controller.py  swarm.py  utils.py  workers.py
tests/: test_agent.py  test_cli.py  test_communication.py  test_config.py  test_controller.py  test_swarm.py  test_workers.py
